--- a/src/main/resources/assets/spacestark/lang/en_us.json
+++ b/src/main/resources/assets/spacestark/lang/en_us.json
@@ -14,6 +14,7 @@
   "item.spacestark.citrine_leggings": "Citrine Leggings",
   "item.spacestark.citrine_boots": "Citrine Boots",
   "item.spacestark.magic_dust": "Magic Dust",
+  "item.spacestark.data_tablet": "Data Tablet",
 
   "block.spacestark.citrine_block": "Citrine Block",
   "block.spacestark.raw_citrine_block": "Raw Citrine Block",
