Added Lots Of Stuff

--- a/src/main/resources/assets/spacestark/lang/en_us.json
+++ b/src/main/resources/assets/spacestark/lang/en_us.json
@@ -52,6 +52,8 @@
   "block.spacestark.ebony_wood": "Ebony Wood",
   "block.spacestark.stripped_ebony_log": "Stripped Ebony Log",
   "block.spacestark.stripped_ebony_wood": "Stripped Ebony Wood",
+  "block.spacestark.ebony_leaves": "Ebony Leaves",
+  "block.spacestark.ebony_sapling": "Ebony Sapling",
 
   "sounds.spacestark.dowsing_rod_found_ore": "Dowsing Rod Found Item Sound",
 
